--- a/asset/css/style-login.css
+++ b/asset/css/style-login.css
@@ -1,3 +1,7 @@
+html, body{
+  padding: 0px;
+  overflow-x: hidden;
+}
 body {
   background-color: #f5f5f5;
   height: 100%
