--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,5 +1,9 @@
+html, body{
+  padding: 0px;
+  overflow-x: hidden;
+}
 body{
-  background-color: #F3F3F3;
+  background-color: #f5f5f5;
 }
 .navbar{
   margin-bottom: 25px;
